--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,15 +1,14 @@
 footer {
   height: 300px;
   background-color: $footer;
-  padding: 1%;
 }
 div.footer_container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 30px;
 }
-img.logo_footer {
+.logo_footer {
+  margin-top: 45px;
   -webkit-filter: brightness(0) saturate(100%) invert(37%) sepia(13%)
     saturate(2008%) hue-rotate(116deg) brightness(93%) contrast(93%);
   filter: brightness(0) saturate(100%) invert(37%) sepia(13%) saturate(2008%)
@@ -17,8 +16,11 @@ img.logo_footer {
 }
 
 ul.nav_footer {
-  margin-top: 45px;
-  margin-bottom: 45px;
+  list-style: none;
+  display: flex;
+  cursor: pointer;
+  align-items: center;
+  margin: 40px;
 }
 
 li.nav_footer {
@@ -33,7 +35,7 @@ li.nav_footer {
 }
 
 img.social_img {
-  margin-right: 30px;
+  margin: 20px;
   cursor: pointer;
   transition: transform 0.3s, color 0.5s;
 }
@@ -43,8 +45,8 @@ img.social_img:hover {
 }
 div.attribution {
   color: $dark-footer;
-  margin-top: 30px;
   font-family: $font-barlow;
+  text-align: center;
 }
 a.link {
   text-decoration: none;
