--- a/sass/_sectionGraphics.scss
+++ b/sass/_sectionGraphics.scss
@@ -6,6 +6,40 @@
   line-height: 1.5em;
   width: 70%;
 }
+section.section_graphics,
+section.section_graphics_2 {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+}
+
+div.rowText {
+  height: 100%;
+  width: 50vw;
+}
+div.styleText {
+  padding: 7em;
+  h1.secondTitle {
+    color: $very-blue;
+    font-size: 35px;
+    font-weight: 900;
+  }
+}
+p.infoText {
+  color: $grayish-blue;
+  font-family: $font-barlow;
+  font-size: 15px;
+  line-height: 1.5em;
+}
+
+div.rowImage {
+  width: 50vw;
+}
+
+img.fruits {
+  height: 100%;
+  width: 100%;
+}
 
 div.row_image1,
 div.row_image2 {
@@ -50,4 +84,45 @@ p.text_section_2 {
   @include p_text;
   color: $dark-blue;
   width: 60%;
+}
+
+@media (max-width: 800px) {
+  section.section_graphics {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+
+  section.section_graphics_2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  div.rowImage {
+    width: 100%;
+  }
+  div.rowText {
+    width: 100%;
+  }
+  div.styleText {
+    padding: 3em;
+  }
+  div.styleText {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  div.row_image1,
+  div.row_image2 {
+    min-height: 80vh;
+    width: 100%;
+  }
+  p.text_section_1,
+  p.text_section_2 {
+    margin-top: 0px;
+  }
+  div.content_text {
+    padding: 0;
+  }
 }
