--- a/sass/_sectionTestimonials.scss
+++ b/sass/_sectionTestimonials.scss
@@ -43,3 +43,18 @@ h2.position {
   font-size: 14px;
   font-weight: 900;
 }
+
+@media (max-width: 900px) {
+  section.testimonials {
+    padding: 40px;
+  }
+  div.card_container {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media only screen and (max-width: 600px) {
+  p.p_testimonials {
+    margin-bottom: 3rem;
+  }
+}
